--- a/etc/build_settings.properties.dist
+++ b/etc/build_settings.properties.dist
@@ -16,6 +16,11 @@ log4j_game_config = etc/log4j-game.properties
 log4j_bureau_config = etc/log4j-bureaulauncher.properties
 
 #
+# Number of threads to use when building GWT
+
+gwt_build_threads = 1
+
+#
 # Used for signing our Java client code
 
 # cert_dir = /export/threerings
