--- a/etc/msoy-server.properties.dist
+++ b/etc/msoy-server.properties.dist
@@ -108,7 +108,7 @@ server_root = /export/msoy
 #
 # Defines the directory into which uploaded media will be stored (in addition
 # to S3, if that is enabled) and the URL from which media will be downloaded.
-# These URLs *must* end in a slash.
+# These URLs (but not the dir) *must* end in a slash.
 
 media_dir = /export/msoy/pages/media
 media_url = http://localhost:8080/media/
