Added a helpful note.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -4,6 +4,10 @@
 # Translation strings that must be looked up programmatically (shared by all
 # pages since there aren't very many such messages and this construct is a PITA
 # to replicate).
+#
+# Note: if you add new translations to this file, you have to manually add
+# methods to the associated DynamicMessages.java file. That file cannot be
+# magically built from the properties file like the non-dynamic messages.
 
 #
 # Game match-making types
