Added a helpful dev-only page for making sure that all of the Server's BadgeTypes have their images and names available to the GWT client.  Each page in the PagedGrid contains all of the images for one badge series.
There is currently one image missing, I've told Jon and I'm sure I'll get art for it soon.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -11,6 +11,7 @@ titleMyWhirled = My Whirled
 titleRooms = My Rooms
 titleCreators = Whirled Welcomes Creators
 titlePassport = Passport
+titlePassportTest = Passport Image Test
 
 #
 # My Whirled
