--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -192,3 +192,14 @@ interest5 = Favorite Movies:
 interest6 = Favorite Shows:
 interest7 = Favorite Books:
 interest8 = About Me:
+
+#
+# Badge names
+badge_3aa0bef4 = Fixture
+badge_c4fd834b = Friendly
+badge_3ca5a071 = Outspoken
+badge_e6a0e95b = Contender
+badge_8a19eba3 = Collector
+badge_7f70d917 = Gamer
+badge_ac95aafe = Ironman
+badge_fa58270b = Magnet
