Implemented a couple badges.  I win the commit war.  Other people can deal with conflicts :p

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -204,3 +204,5 @@ badge_7f70d917 = Gamer
 badge_ac95aafe = Ironman
 badge_fa58270b = Magnet
 badge_e6af01a4 = Judge
+badge_1923c147 = Shopper
+badge_26873aba = Professional
