Extracted out common item grid code. Created reusable Favorites panel. The member id can now be set in order to view others' favorites. Added favorites blurb to the profile panel. Moved favorites grid to "Shop" page.
Still needs cleanup and some bug fixes. I still need to move some of the favorites/item code to the item package to get rid of some of the dependencies I've reintroduced.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -35,7 +35,7 @@ profileEdit = Edit Profile
 
 displayName = Whirled Name
 status = Status
-statusQue = is 
+statusQue = is
 homepage = Home Page
 
 age = {0} years old
@@ -65,6 +65,12 @@ browseItems = Browse Items
 
 interestsTitle = Information
 interestsEdit = Edit Info
+
+#
+# FavoritesBlurb
+
+favoritesTitle = Recent Favorites
+seeMoreFavorites = See more of {0}''s favorites...
 
 #
 # FriendsBlurb
