--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -83,3 +83,9 @@ boughtDecorUsage = Click above to use your new backdrop now!
 boughtAudioUsage = Click above to use your new song as the soundtrack for this room!
 boughtPetUsage = Click above to add your new pet to this room!
 boughtOtherUsage = Click above to add your new item to this room!
+
+#
+# Favorites Panel
+
+myFavoritesTitle = My Favorites
+favoritesTitle = Favorites
