Creator name now links straight to their profile, and there is an additional link to browse their shop. No more funky popup menu.

--- a/src/gwt/client/item/ItemMessages.properties
+++ b/src/gwt/client/item/ItemMessages.properties
@@ -7,7 +7,7 @@
 # Global bits
 
 viewProfile = View Profile
-browseCatalogFor = Browse Shop
+browseCatalogFor = Browse {0}''s Shop
 
 remixTip = This item is remixable.
 itemBy = by {0}
