Fancy media type checks during upload, for WRLD-247: - Avatars and Pets only accept swf and remixable media; other files throw an error, and point   the player at the Easy Image Avatar and the Easy Image Pet, respectively.   (No hyperlinkage, just a URL text - that should probably change.) - Game media must be swf files (weren't checked before). - Toys must also be swf files, and return an appopriate error message.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -48,7 +48,9 @@ errAudioNotAudio = Audio data must be an MP3 file.
 avatarLabel = Avatar Media
 avatarTip = Avatar as seen in the World
 
-errAvatarNotFlash = Avatars must be flash (SWF) files.
+errAvatarNotFlash = Avatar media must be flash (SWF) files. If you''d like to use \
+  a regular image, please use the Easy Image Avatar, and remix it with your image. \
+  See here for more details: http://www.whirled.com/#shop-l_5_1609 
 
 #
 # DocumentEditor
@@ -71,6 +73,8 @@ furniHotSpotTip = This is the pixel offset from the upper left of the furniture 
 
 gameLabel = Game Media
 gameTip = The SWF file for your game
+
+errGameNotFlash = Game media must be flash (SWF) files. 
 
 gameServerHeadingTip = The following fields are only needed for games that employ a server agent
 gameServerMediaLabel = Server Agent Compiled Code
@@ -101,7 +105,9 @@ errInvalidShot = The screenshot image must be a GIF, PNG or JPG and exactly {0}x
 petLabel = Pet Media
 petTip = Pet as seen in the World
 
-errPetNotFlash = Pets must be flash (SWF) files.
+errPetNotFlash = Pet media must be flash (SWF) files. If you''d like to use \
+  a regular image, please use the Easy Image Pet, and remix it with your image. \
+  See here for more details: http://www.whirled.com/#shop-l_6_404
 
 #
 # PhotoEditor
@@ -110,6 +116,11 @@ photoLabel = Image Media
 photoTip = Main Image
 
 errPhotoNotImage = Images must be a GIF, PNG or JPG.
+
+#
+# ToyEditor
+
+errToyNotFlash = Toy media must be flash (SWF) files.  
 
 #
 # VideoEditor
