Let's put that all on one line so that our beautiful user interface remains mostly beautiful.

--- a/src/gwt/client/item/ItemMessages.properties
+++ b/src/gwt/client/item/ItemMessages.properties
@@ -7,7 +7,6 @@
 # Global bits
 
 viewProfile = View Profile
-browseCatalogFor = Browse {0}''s Shop
 
 remixTip = This item is remixable.
 itemBy = by {0}
@@ -44,6 +43,9 @@ favorite = Favorite
 
 bidPlay = Play this game...
 viewInShop = View this item in the shop
+
+browseCatalogFor = (Browse)
+browseCatalogTip = See all of {0}''s items in the Shop
 
 #
 # DoListItemPopup
