A bunch of pushing UI bits into place.  Nothing is styled yet.  Looks like I have to write a stupid date formatter myself.  Joy.  Also, there is an exception getting thrown in the initial badge set creation stuff on the server that I need to sort out.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -122,3 +122,4 @@ passportDescription = Your Whirled Passport stamps suggest fun things to do in W
   record of the fun you''ve had along the way.  Collect them all!
 passportNextBar = Go for these new stamps!
 passportStampsTitle = {0}''s Passport Stamps
+passportFinishedSeries = Finished {0}
