Rudimentary date formatting.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -206,3 +206,18 @@ badge_fa58270b = Magnet
 badge_e6af01a4 = Judge
 badge_1923c147 = Shopper
 badge_26873aba = Professional
+
+#
+# Month names
+month_0 = January
+month_1 = February
+month_2 = March
+month_3 = April
+month_4 = May
+month_5 = June
+month_6 = July
+month_7 = August
+month_8 = September
+month_9 = October
+month_10 = November
+month_11 = December
