--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -188,10 +188,10 @@ searchDefault = <search>
 
 browserTitle = Browser Compatability Warning!
 browserOldMsie = Whirled is only supported on Internet Explorer 7.0 and higher. \
-	Please <a href="http://www.microsoft.com/windows/downloads/ie/getitnow.mspx">upgrade \
-	Internet Explorer now</a>, or for the best experience try Firefox 3.
+    Please <a href="http://www.microsoft.com/windows/downloads/ie/getitnow.mspx">upgrade \
+    Internet Explorer now</a>, or for the best experience try Firefox 3.
 browserOldFirefox = We highly recommend upgrading to Firefox 3 for for a faster, better \
-	Whirled experience.
+    Whirled experience.
 browserUnsupported = Whirled may not be compatible with your web browser.  For the best \
     experience, we recommend using Firefox 3.
 browserGetFirefox = Get Firefox 3
@@ -218,3 +218,7 @@ complainNeedDescription = You must enter a description before filing a complaint
 # PriceLabel
 
 price = Price:
+
+#
+# Date string - provided as dateString(year, month, day)
+dateString = {1} {2}, {0}
