--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -206,6 +206,7 @@ badge_fa58270b = Magnet
 badge_e6af01a4 = Judge
 badge_1923c147 = Shopper
 badge_26873aba = Professional
+badge_325f4c9 = Artisan
 
 #
 # Month names
