--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -209,6 +209,33 @@ badge_26873aba = Professional
 badge_325f4c9 = Artisan
 
 #
+# Badge descriptions
+badgeDesc1_3aa0bef4 = Spend 3 total hours exploring rooms and games in Whirled!
+badgeDescN_3aa0bef4 = Log {0} hours in Whirled!
+badgeDesc1_c4fd834b = Make a friend in Whirled!
+badgeDescN_c4fd834b = Make {0} friends!
+badgeDesc1_3ca5a071 = Give a creator feedback on a shop item by commenting on it!
+badgeDescN_3ca5a071 = Give {0} comments to content creators!
+badgeDesc1_e6a0e95b = Win a multiplayer game!
+badgeDescN_e6a0e95b = Win {0} multiplayer games!
+badgeDesc1_8a19eba3 = Earn a trophy in a game!
+badgeDescN_8a19eba3 = Earn {0} game trophies!
+badgeDesc1_7f70d917 = Play a game to win coins and earn trophies!
+badgeDescN_7f70d917 = Play {0} game sessions!
+badgeDesc1_ac95aafe = Come back and check out Whirled tomorrow!
+badgeDescN_ac95aafe = Check out Whirled {0} days in a row!
+badgeDesc1_fa58270b = Bring a real world friend to be a Whirled friend!
+badgeDescN_fa58270b = Bring {0} of your real world friends into the Whirled!
+badgeDesc1_e6af01a4 = Check an item in the shop and rate it!
+badgeDescN_e6af01a4 = Rate {0} items in the shop!
+badgeDesc1_1923c147 = Buy a shop item, like a new avatar or a toy for your room!
+badgeDescN_1923c147 = Buy {0} shop items!
+badgeDescN_26873aba = Earn {0} coins in total shop sales!
+badgeDesc1_325f4c9 = Get a solid rating of over 4 stars on one of your listed items!
+badgeDescN_325f4c9 = Sell {0} items in the shop with a solid rating of 4 or more stars!
+
+
+#
 # Month names
 month_0 = January
 month_1 = February
