Be more international in our date formatting.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -221,4 +221,4 @@ price = Price:
 
 #
 # Date string - provided as dateString(year, month, day)
-dateString = {1} {2}, {0}
+dateString = {0} {1} {2}
