Two things: 1. There is already a way to format dates in GWT, it's called SimpleDateFormat and we use it all over the place. 2. Let's not use it all over the place and instead provide MsoyUI methods for formatting dates consistently wherever we display them.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -63,7 +63,7 @@ catIntro5 = Dress yourself up with an avatar. Many have funny animations that \
 catIntro6 = Get a digital friend. Pets live in your room and can follow you around the Whirled.
 catIntro7 = Rock your Whirled. Buy songs and play them in your room.
 catIntro8 = Put your favorite videos up on the wall in your room and watch them with your friends.
-catIntro9 = Set your room's stage with a backdrop. Make your room into the streets \
+catIntro9 = Set your room''s stage with a backdrop. Make your room into the streets \
   of Paris, a nightclub or the surface of the moon.
 catIntro10 = Have some fun! Toys are interactive items you and your friends can \
   play with in your room.
@@ -195,6 +195,7 @@ interest8 = About Me:
 
 #
 # Badge names
+
 badge_3aa0bef4 = Fixture
 badge_c4fd834b = Friendly
 badge_3ca5a071 = Outspoken
@@ -213,6 +214,7 @@ badge_6e67007d = Character Designer
 
 #
 # Badge descriptions
+
 badgeDesc0_3aa0bef4 = Spend 3 total hours exploring rooms and games in Whirled!
 badgeDescN_3aa0bef4 = Log {0} hours in Whirled!
 badgeDesc0_c4fd834b = Make a friend in Whirled!
@@ -245,19 +247,3 @@ badgeDesc2_f0c035cd = Sell a piece of Furniture in the shop!
 badgeDesc0_6e67007d = Upload an Avatar to Whirled!
 badgeDesc1_6e67007d = List an Avatar in the shop!
 badgeDesc2_6e67007d = Sell an Avatar in the shop!
-
-
-#
-# Month names
-month_0 = January
-month_1 = February
-month_2 = March
-month_3 = April
-month_4 = May
-month_5 = June
-month_6 = July
-month_7 = August
-month_8 = September
-month_9 = October
-month_10 = November
-month_11 = December
