Every game now has a whirled associated with it.  When editing a game, you have the choice of either picking an existing whirled that you manage, or having the server automatically create one for you based on a template that is still being designed (scene #6).  So far, a link to the whirled is displayed on the game details page above the # of games played.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -97,6 +97,11 @@ gameDefinitionError = Failed to parse your custom parameter: {0}
 
 gameAVRG = AVR Game?
 
+gameWhirledLabel = Whirled
+gameWhirledTip = The Whirled associated with this game (you must be a manager)
+gameWhirledSelectNew = NONE - Create a new Whirled for this game
+gameWhirledCreating = A new Whirled will be created for this game: {0} Whirled.
+
 errInvalidShot = The screenshot image must be a GIF, PNG or JPG and exactly {0}x{1} pixels.
 
 #
