--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -49,6 +49,7 @@ ipInstructionsTooLong = Your instructions are too long. Please shorten them by \
 
 # GameBitsPanel
 
+bitsWhirledLink = Visit the game''s official Whirled
 bitsGenre = Genre:
 bitsPlayers = Players:
 bitsAvgDuration = Avg. Time:
