--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -67,12 +67,12 @@ already_friend = You are already their friend.
 #
 # Group messages
 
-group_name_in_use = That group name is already taken. Please choose another.
+group_name_in_use = That whirled name is already taken. Please choose another.
 
 #
 # Forum messages
 
-invalid_group = That group does not exist.
+invalid_group = That whirled does not exist.
 invalid_thread = That thread does not exist.
 invalid_message = That message does not exist.
 
@@ -84,9 +84,9 @@ unsupported_webmail = The WebMail address is unsupported
 user_input_required = Unable to read from WebMail site
 max_webmail_attempts = Too many import attempts in a short period.  Please wait a few mintues and \
   try again.
-  
-  
+
+
 #
 # Admin messages
-  
+
 ab_test_duplicate_name = There is already another test with this name.
