--- a/src/gwt/shop.gwt.xml.in
+++ b/src/gwt/shop.gwt.xml.in
@@ -6,6 +6,9 @@
   <source path="com/threerings/msoy/stuff/gwt"/>
   <source path="com/threerings/msoy/game/data/all"/>
   <source path="com/threerings/msoy/game/gwt"/>
+  <source path="com/threerings/msoy/group/data/all"/>
+  <source path="com/threerings/msoy/group/gwt"/>
+  <source path="com/threerings/msoy/fora/gwt"/>
 
   <source path="client/shop"/>
   <source path="client/comment"/>
