* Big change to how coins are handled.  Instead of being a property on the member record, coins and other money-related info are maintained and audited by the money service (see MoneyLogic).  This includes a migration process to copy existing coin amounts from the member records to the money service. * Shop item prices are secured when the user views item details. * Coins history records older than 10 days are automatically purged from the system.

--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -49,6 +49,7 @@ hit_sales_limit = Oops. That item is limited edition and it has sold out.
 insufficient_flow = Oops. You don't have enough coins. Earn coins by playing games!
 insufficient_gold = Oops. You don't have enough bars.
 list_super_item = In order to list sub items in the shop, the parent item must first be listed.
+cost_updated = The price for this item has been updated.  Please refresh the page to see the newest price.
 
 #
 # Swiftly server messages
