--- a/src/gwt/whirleds.gwt.xml.in
+++ b/src/gwt/whirleds.gwt.xml.in
@@ -1,6 +1,7 @@
 <module>
   <inherits name="msgs"/>
 
+  <source path="com/threerings/msoy/room/gwt"/>
   <source path="com/threerings/msoy/group/data/all"/>
   <source path="com/threerings/msoy/group/gwt"/>
 
