--- a/src/gwt/landing.gwt.xml.in
+++ b/src/gwt/landing.gwt.xml.in
@@ -9,6 +9,7 @@
   <source path="com/threerings/msoy/fora/gwt"/>
   <source path="com/threerings/msoy/game/data/all"/>
   <source path="com/threerings/msoy/game/gwt"/>
+  <source path="com/threerings/msoy/room/gwt"/>
   <source path="com/threerings/msoy/group/data/all"/>
   <source path="com/threerings/msoy/group/gwt"/>
   <source path="com/threerings/msoy/landing/gwt"/>
