Fix positioning on featured whirleds panel with new snapshot size, and extracate whirleds.css from the landing page.

--- a/src/gwt/landing.gwt.xml.in
+++ b/src/gwt/landing.gwt.xml.in
@@ -23,8 +23,7 @@
 
   <public path="public/landing"/>
   <stylesheet src="/css/account.css"/> <!-- sigh -->
-  <stylesheet src="/css/games.css"/>
-  <stylesheet src="/css/whirleds.css"/> <!-- end sigh -->
+  <stylesheet src="/css/games.css"/><!-- end sigh -->
   <stylesheet src="/css/landing.css"/>
 
   <entry-point class="client.landing.LandingPage"/>
