Add "your email address" default text to login panel on landing page; remove landing page reliance on account.css.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -63,6 +63,7 @@ nonSupportNameInvalid = ''Agent'' is reserved for Whirled staff. Sorry.
 # Logon panel
 
 logonEmail = Email:
+logonEmailDefault = your email address
 logonPassword = Password:
 logonLogon = Go!
 forgotPassword = Forgot?
