--- a/src/gwt/landing.gwt.xml.in
+++ b/src/gwt/landing.gwt.xml.in
@@ -22,8 +22,7 @@
   <source path="client/landing"/>
 
   <public path="public/landing"/>
-  <stylesheet src="/css/account.css"/> <!-- sigh -->
-  <stylesheet src="/css/games.css"/><!-- end sigh -->
+  <stylesheet src="/css/games.css"/>
   <stylesheet src="/css/landing.css"/>
 
   <entry-point class="client.landing.LandingPage"/>
