We're all about doing things dynamically here in passport-land, so lets generate the URL for those images, and the category headings dynamically from the StampCategory Enum.  If we didn't have to enumerate dynamic message classes as exceptions to some targets in our build.xml, I'd say we should bump passport and badge dynamic messages into their own dynamic message class.  Maybe it's worth it anyway...
Also, include the stamps that below in the lower section and are mapped by category in the 
data sent from the server in the display.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -247,3 +247,11 @@ badgeDesc2_f0c035cd = Sell a piece of Furniture in the shop!
 badgeDesc0_6e67007d = Upload an Avatar to Whirled!
 badgeDesc1_6e67007d = List an Avatar in the shop!
 badgeDesc2_6e67007d = Sell an Avatar in the shop!
+
+#
+# Passport stamp categories
+
+passportCategory_social = Mingle
+passportCategory_game = Play
+passportCategory_shopping = Shop
+passportCategory_creation = Create
