New images and rearranging of the discussion post details.

--- a/src/gwt/client/msgs/MsgsMessages.properties
+++ b/src/gwt/client/msgs/MsgsMessages.properties
@@ -132,6 +132,7 @@ msgReplyPosted = Reply posted.
 confirmDelete = Are you sure you want to delete your message?
 msgPostDeleted =  The post has been deleted.
 msgPostUpdated = Your post has been updated.
+msgPostEditedOn = Edited On {0}
 
 #
 # NewThreadPanel
