Prettied up the favorites panel. Added a sidebar menu for filtering favorite lists by item type. Added a "My Favorites" link to Shop page title bar.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -85,7 +85,13 @@ boughtPetUsage = Click above to add your new pet to this room!
 boughtOtherUsage = Click above to add your new item to this room!
 
 #
-# Favorites Panel
+# FavoritesPanel
 
 myFavoritesTitle = My Favorites
 favoritesTitle = Favorites
+
+#
+# FavoritesSideBar
+
+favoritesSideBarTitle = Show:
+allItems = All
