Final proofreading on the image test page: "Professional" was too long.  I've changed it to "Craftsman", but it's only textual: we'll need new art, and Jon needs to sign off on the change as well.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -206,7 +206,7 @@ badge_ac95aafe = Ironman
 badge_fa58270b = Magnet
 badge_e6af01a4 = Judge
 badge_1923c147 = Shopper
-badge_26873aba = Professional
+badge_26873aba = Craftsman
 badge_325f4c9 = Artisan
 badge_117171d7 = Landscape Painter
 badge_f0c035cd = Furniture Builder
