- publish proper member feed messages when badges are awarded - and display those messages!

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -31,6 +31,8 @@ friendWonTrophies = {0} earned the {1} trophies.
 friendListedItem = {0} has added {1} to the shop.
 friendGainedLevel = {0} has reached level {1}.
 friendsGainedLevel = Your friends have reached new levels: {0}.
+friendWonBadge = {0} earned the {1} stamp.
+friendWonBadges = {0} earned the {1} stamps.
 
 andCombine = {0} and {1}
 commaCombine = {0}, {1}
