This label was too long and was breaking the page layout.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -77,7 +77,7 @@ gameTip = The SWF file for your game
 errGameNotFlash = Game media must be flash (SWF) files. 
 
 gameServerHeadingTip = The following fields are only needed for games that employ a server agent
-gameServerMediaLabel = Server Agent Compiled Code
+gameServerMediaLabel = Server Agent Code
 gameServerMediaTip = An .abc file containing your server agent.
 gameServerClass = Server Agent Class
 gameServerClassTip = Full name of the class to instantiate (leave blank for default)
