Badge levels have nice flavor text

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -194,6 +194,15 @@ interest7 = Favorite Books:
 interest8 = About Me:
 
 #
+# Badge level flavor text
+badgelevel_0 = Apprentice
+badgelevel_1 = Novice
+badgelevel_2 = Journeyman
+badgelevel_3 = Adept
+badgelevel_4 = Master
+badgelevel_5 = Grandmaster
+
+#
 # Badge names
 
 badge_3aa0bef4 = Fixture
