--- a/etc/build_settings.properties.dist
+++ b/etc/build_settings.properties.dist
@@ -16,11 +16,28 @@ log4j_game_config = etc/log4j-game.properties
 log4j_bureau_config = etc/log4j-bureaulauncher.properties
 
 #
-# Number of threads to use when building GWT
+# Used for signing our Java client code
+
+# cert_dir = /export/threerings
+
+#
+# Indicates the number of threads to use when building GWT.
 
 gwt_build_threads = 1
 
 #
-# Used for signing our Java client code
+# Indicates which browser you use for testing (GWT builds are restricted to one
+# browser to reduce build times). If no value is specified, all browsers are built.
 
-# cert_dir = /export/threerings
+# gwt_user_agent = gecko
+# gwt_user_agent = ie6
+# gwt_user_agent = safari
+# gwt_user_agent = opera
+
+#
+# Indicates whether or not GWT should build OBFuscated or PRETTY JavaScript. We
+# always use OBF in dev and production builds, but sometimes this can aid in
+# tracking down a bug that only happens in browser.
+
+gwt_style = OBF
+# gwt_style = PRETTY
