--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -243,7 +243,7 @@ badgeDescN_fa58270b = Bring {0} of your real world friends into the Whirled!
 badgeDesc0_e6af01a4 = Check an item in the shop and rate it!
 badgeDescN_e6af01a4 = Rate {0} items in the shop!
 badgeDesc0_1923c147 = Buy a shop item, like a new avatar or a toy for your room!
-badgeDescN_1923c147 = Buy {0} shop items!
+badgeDescN_1923c147 = Spend {0} coins in the shop!
 badgeDescN_26873aba = Earn {0} coins in total shop sales!
 badgeDesc0_325f4c9 = Get a solid rating of over 4 stars on one of your listed items!
 badgeDescN_325f4c9 = Sell {0} items in the shop with a solid rating of 4 or more stars!
