A couple of old usability niggles.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -39,7 +39,7 @@ createPassword = Password:
 createPasswordTip = Don''t ever tell anyone your password, not even us! \
   Only enter your password into the box used to log in.
 
-createConfirm = Re-enter password:
+createConfirm = Confirm password:
 createConfirmTip = Enter your password again to make sure you typed it in correctly.
 
 createDisplayName = Whirled Name:
@@ -71,9 +71,9 @@ creatingAccount = Signing up...
 
 #
 # Login page
+
 loginPageTitle = Log In
 loginPageSubmit = Log In
-
 
 #
 # OptOutPanel
@@ -125,6 +125,6 @@ welcomeHowMuchExplain = You can glance at the upper right of the window at any t
 
 welcomeFree = Whirled is <span class="Free">free</span>! Get coins by playing fun games.
 
-welcomeNextTitle = NEXT, click the <em>ME</em> tab in the top left of this page.
+welcomeNextTitle = NEXT, click the <em>Me</em> tab in the top left of this page.
 welcomeNextTip = The "Me" page is your home base in Whirled. From there you can see \
   which of your friends are online, read your news and find fun things to do.
