--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -238,8 +238,8 @@ badgeDesc0_7f70d917 = Play a game to win coins and earn trophies!
 badgeDescN_7f70d917 = Play {0} game sessions!
 badgeDesc0_ac95aafe = Come back and check out Whirled tomorrow!
 badgeDescN_ac95aafe = Check out Whirled {0} days in a row!
-badgeDesc0_fa58270b = Bring a real world friend to be a Whirled friend!
-badgeDescN_fa58270b = Bring {0} of your real world friends into the Whirled!
+badgeDesc0_fa58270b = Bring a real world friend into Whirled!
+badgeDescN_fa58270b = Bring {0} of your real world friends into Whirled!
 badgeDesc0_e6af01a4 = Check an item in the shop and rate it!
 badgeDescN_e6af01a4 = Rate {0} items in the shop!
 badgeDesc0_1923c147 = Buy a shop item, like a new avatar or a toy for your room!
